tried to remove all follow things

--- a/src/Chirp.Razor/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Razor/Pages/UserTimeline.cshtml
@@ -31,7 +31,7 @@
                                 <strong>
                                     <a href="/@cheep.Author">@cheep.Author</a>
                                     @if (User.Identity?.IsAuthenticated == true) {
-                                        if (!Model.DoesFollow(cheep.AuthorId)) 
+                                       @*  if (!Model.DoesFollow(cheep.AuthorId)) 
                                         {
                                             // Link to page that adds the author to the following list of the current user and redirects back to the current page
                                             <a href="location.href='?follow=@cheep.AuthorId'">follow</a>
@@ -40,7 +40,7 @@
                                         {
                                             // Link to page that removes the author from the following list of the current user and redirects back to the current page
                                             <a href="location.href='?unfollow=@cheep.AuthorId'">unfollow</a>
-                                        }
+                                        } *@
                                     }
                                 </strong>
                                 @cheep.Message
