--- a/src/Chirp.Razor/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Razor/Pages/UserTimeline.cshtml
@@ -12,7 +12,7 @@
           <div class="cheepbox">
         <h3>What's on your mind @(User.Identity.Name)?</h3>
         <form method="post">
-            <input type ="text" style="float: left" asp-for="CheepMessageTimeLine">
+            <input type ="text" style="float: left" asp-for="CheepMessageTimeLine" required>
             <input type="submit" asp-page-handler="Submit" value="Share">
         </form>
     </div>
