--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -28,17 +28,17 @@
                         <li>
                             <p>
                                 <strong>
-                                    <a href="/@cheep.Author">@cheep.Author</a>
+                                    <a href="/@cheep.AuthorName">@cheep.AuthorName</a>
                                     @if (User.Identity?.IsAuthenticated == true) {
-                                        if (!Model.DoesFollow(cheep.AuthorId)) 
+                                        if (!Model.DoesFollow(cheep.AuthorName)) 
                                         {
                                             // Link to page that adds the author to the following list of the current user and redirects back to the current page
-                                            <a href="?follow=@cheep.AuthorId">follow</a>
+                                            <a href="?follow=@cheep.AuthorName">follow</a>
                                         } 
                                         else 
                                         {
                                             // Link to page that removes the author from the following list of the current user and redirects back to the current page
-                                            <a href="?unfollow=@cheep.AuthorId">unfollow</a>
+                                            <a href="?unfollow=@cheep.AuthorName">unfollow</a>
                                         }
                                     }
                                 </strong>
