--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -45,6 +45,10 @@
                                 @cheep.Message
                                 <small>&mdash; @cheep.Timestamp</small>
                             </p>
+                            <p class="likesContainer">
+                                <button>Like</button>
+                                <small>Likes: </small>@cheep.Likes
+                            </p>
                         </li>
                     }
                 </ul> 
