--- a/src/Chirp.Razor/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Razor/Pages/UserTimeline.cshtml
@@ -46,6 +46,10 @@
                                 @cheep.Message
                                 <small>&mdash; @cheep.Timestamp</small>
                             </p>
+                           <p class="likesContainer">
+                                <button>Like</button>
+                                <small>Likes: @cheep.Likes</small>
+                            </p>
                         </li>
                     }
                 </ul>
