Made necessary changes to Razor pages

--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -28,7 +28,7 @@
                         <li>
                             <p>
                                 <strong>
-                                    <a href="/@cheep.Author">@cheep.Author</a>
+                                    <a href="/@cheep.AuthorName">@cheep.AuthorName</a>
                                     @* @if (User.Identity?.IsAuthenticated == true) {
                                          if (!Model.DoesFollow(cheep.AuthorId)) 
                                         {
