--- a/src/Chirp.Razor/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Razor/Pages/UserTimeline.cshtml
@@ -29,7 +29,7 @@
                         <li>
                             <p>
                                 <strong>
-                                    <a href="/@cheep.Author">@cheep.Author</a>
+                                    <a href="/@cheep.AuthorName">@cheep.AuthorName</a>
                                     @if (User.Identity?.IsAuthenticated == true) {
                                        @*  if (!Model.DoesFollow(cheep.AuthorId)) 
                                         {
@@ -51,7 +51,7 @@
                 </ul>
                  <div class="pageNumber">
                     <span>Page:</span>
-                    @for (int i = 1; i < ((Model._service.GetCountOfAllCheepFromAuthor(Model.Cheeps[0].Author)/32)+2); i++)
+                    @for (int i = 1; i < ((Model._service.GetCountOfAllCheepFromAuthor(Model.Cheeps[0].AuthorName)/32)+2); i++)
                     {   
                         <button onclick="location.href='?page=@i'">@i</button>
                     }
