Design changes. The cheep is now appearing on a new line.
Co-authored-by: Marius <mariu@itu.dk>

--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -42,7 +42,8 @@
                                         }
                                     }
                                 </strong>
-                                @cheep.Message
+                                <br />
+                                <span>@cheep.Message</span>
                                 <small>&mdash; @cheep.Timestamp</small>
                             </p>
                             <p class="likesContainer">
