--- a/src/Chirp.Razor/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Razor/Pages/UserTimeline.cshtml
@@ -43,7 +43,8 @@
                                         }
                                     }
                                 </strong>
-                                @cheep.Message
+                                <br />
+                                <span>@cheep.Message</span>
                                 <small>&mdash; @cheep.Timestamp</small>
                             </p>
                            <p class="likesContainer">
