--- a/src/Chirp.Razor/wwwroot/css/style.css
+++ b/src/Chirp.Razor/wwwroot/css/style.css
@@ -130,7 +130,7 @@ div.page ul.cheeps li p.likesContainer {
   bottom: 5px;
 }
 
-div.page ul.cheeps li p.likesContainer button {
+div.page ul.cheeps li div.likesContainer button {
   background-color: #26776F;
   border: white;
   color: white;
