Button on razor page now works. Corrected method IncreaseLike in AuthorRepository

--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -47,7 +47,9 @@
                                 <small>&mdash; @cheep.Timestamp</small>
                             </p>
                             <div class="likesContainer">
-                                <button type="submit" asp-asp-page-handler="Like">Like</button>
+                                <form asp-page-handler="Like" method="post">
+                                    <button value="@cheep.CheepId">Like</button>
+                                </form>
                                 <small>Likes: </small>@cheep.Likes
                             </div>
                         </li>
