Again I'm an unintelligent being of immense tomfoolery who didn't realise that author.follows doesnt return everybody who follows them but instead who they follow. Also I added styling

--- a/src/Chirp.Razor/Pages/UserPage.cshtml
+++ b/src/Chirp.Razor/Pages/UserPage.cshtml
@@ -21,12 +21,10 @@
                 amountOfPeople = "person";
             }
             <p class="userpage-text">You are following @Model.Following.Count @amountOfPeople</p>
-            <ul class="userpage-list">
                 @foreach (var user in Model.Following)
                 {
-                    <a class="userpage-list-item" href="/@user.Name">@user.Name</a>
+                    <a class="userpage-custom-list-link" href="/@user.Name">@user.Name</a>
                 }
-            </ul>
         }
         else
         {
