--- a/src/Chirp.Razor/Pages/Public.cshtml
+++ b/src/Chirp.Razor/Pages/Public.cshtml
@@ -29,16 +29,20 @@
                             <p>
                                 <strong>
                                     <a href="/@cheep.AuthorName">@cheep.AuthorName</a>
-                                    @if (User.Identity?.IsAuthenticated == true) {
-                                        if (!await Model.DoesFollow(cheep.AuthorName)) 
+                                    @if (User.Identity?.IsAuthenticated == true) 
+                                    {
+                                        if (User.Identity.Name != cheep.AuthorName)
                                         {
-                                            // Link to page that adds the author to the following list of the current user and redirects back to the current page
-                                            <a href="?follow=@cheep.AuthorName">follow</a>
-                                        } 
-                                        else 
-                                        {
-                                            // Link to page that removes the author from the following list of the current user and redirects back to the current page
-                                            <a href="?unfollow=@cheep.AuthorName">unfollow</a>
+                                            if (!await Model.DoesFollow(cheep.AuthorName)) 
+                                            {
+                                                // Link to page that adds the author to the following list of the current user and redirects back to the current page
+                                                <a href="?follow=@cheep.AuthorName">follow</a>
+                                            } 
+                                            else 
+                                            {
+                                                // Link to page that removes the author from the following list of the current user and redirects back to the current page
+                                                <a href="?unfollow=@cheep.AuthorName">unfollow</a>
+                                            }
                                         }
                                     }
                                 </strong>
@@ -47,7 +51,8 @@
                                 <small>&mdash; @cheep.Timestamp</small>
                             </p>
                             <div class="likesContainer">
-                                @if (User.Identity != null && User.Identity.IsAuthenticated) {
+                                @if (User.Identity != null && User.Identity.IsAuthenticated) 
+                                {
                                     <form asp-page-handler="Like" method="post">
                                         <button name="cheepId" value="@cheep.CheepId">Like</button>
                                     </form>
