--- a/src/Chirp.Razor/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Razor/Pages/UserTimeline.cshtml
@@ -30,16 +30,20 @@
                             <p>
                                 <strong>
                                     <a href="/@cheep.AuthorName">@cheep.AuthorName</a>
-                                    @if (User.Identity?.IsAuthenticated == true) {
-                                        if (!await Model.DoesFollow(cheep.AuthorName)) 
-                                        {
-                                            // Link to page that adds the author to the following list of the current user and redirects back to the current page
-                                            <a href="?follow=@cheep.AuthorName">follow</a>
-                                        } 
-                                        else
-                                        {
-                                            // Link to page that removes the author from the following list of the current user and redirects back to the current page
-                                            <a href="?unfollow=@cheep.AuthorName">unfollow</a>
+                                    @if (User.Identity?.IsAuthenticated == true) 
+                                    {
+                                        if (User.Identity.Name != cheep.AuthorName) 
+                                            {
+                                            if (!await Model.DoesFollow(cheep.AuthorName)) 
+                                            {
+                                                // Link to page that adds the author to the following list of the current user and redirects back to the current page
+                                                <a href="?follow=@cheep.AuthorName">follow</a>
+                                            } 
+                                            else
+                                            {
+                                                // Link to page that removes the author from the following list of the current user and redirects back to the current page
+                                                <a href="?unfollow=@cheep.AuthorName">unfollow</a>
+                                            }
                                         }
                                     }
                                 </strong>
@@ -48,7 +52,8 @@
                                 <small>&mdash; @cheep.Timestamp</small>
                             </p>
                            <div class="likesContainer">
-                                @if (User.Identity != null && User.Identity.IsAuthenticated) {
+                                @if (User.Identity != null && User.Identity.IsAuthenticated) 
+                                {
                                     <form asp-page-handler="Like" method="post">
                                         <button name="cheepId" value="@cheep.CheepId">Like</button>
                                     </form>
