--- a/src/Chirp.Razor/Pages/UserTimeline.cshtml
+++ b/src/Chirp.Razor/Pages/UserTimeline.cshtml
@@ -63,9 +63,11 @@
                         </li>
                     }
                 </ul>
+                @if(User?.Identity?.Name!=null){
                  <div class="pageNumber">
                     <span>Page:</span>
-                    @for (int i = 1; i < ((Model._service.GetCountOfAllCheepFromAuthor(Model.Cheeps[0].AuthorName)/32)+2); i++)
+                    
+                    @for (int i = 1; i < ((Model._service.GetCountOfAllCheepsFromCombinedAuthor(User.Identity.Name)/32)+2); i++)
                     {   
                         <button onclick="location.href='?page=@i'">@i</button>
                     }
@@ -73,6 +75,7 @@
                 <div class="pageNumber">
                     <button onclick="location.href='?page=1'">Go to page 1</button>
                 </div>
+                }
             }
             else
             {
